Remove reference to sbi request and eligibility (#24)
all references of SBI request and Eligbility removed
